make checkbox on same line as labels

--- a/login/resources/css/ht6.css
+++ b/login/resources/css/ht6.css
@@ -122,6 +122,10 @@ a:hover {
     max-width: 100%;
 }
 
+.checkbox > label > input[type="checkbox"] {
+    display: inline;
+}
+
 .ht6-form-group label,.ht6-form-group input {
     display: block;
 }
