--- a/login/resources/css/ht6.css
+++ b/login/resources/css/ht6.css
@@ -26,6 +26,10 @@ a:hover {
     color: #CC8535;
 }
 
+.margin-top-2 {
+    margin-top: 2em;
+}
+
 .ht6-kc-body {
     background: linear-gradient(88.96deg, #002C37 1.77%, #004D57 95.9%);
     background-size: cover;
