--- a/login/resources/css/ht6.css
+++ b/login/resources/css/ht6.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');
 :root {
     --secondary-dark-navy: #08566B;
-    --copy-navy: #0B2F39;
+    --primary-navy: #0B2F39;
+    --primary-teal: #23B5AF;
+    --copy-red: #AF0029;
+    --copy-green: #0F893B;
+    --darker-teal: #19837F;
     --form-half-width-width: 45%;
     --form-half-width-margin: 5%;
 }
@@ -18,12 +22,13 @@ input {
 }
 
 a {
-    color: #CA500B;
+    color: var(--primary-teal);
     font-weight: bold;
+    transition: color linear 200ms;
 }
 
 a:hover {
-    color: #CC8535;
+    color: var(--darker-teal);
 }
 
 .margin-top-2 {
@@ -31,8 +36,10 @@ a:hover {
 }
 
 .ht6-kc-body {
-    background: linear-gradient(88.96deg, #002C37 1.77%, #004D57 95.9%);
+    /*background: linear-gradient(88.96deg, #002C37 1.77%, #004D57 95.9%);*/
+    background-image: url("../images/backdrop.png");
     background-size: cover;
+    background-position: center 60%;
     height: 100%;
     margin: 0;
 }
@@ -55,6 +62,7 @@ a:hover {
     display: flex;
     align-items: center;
     padding: calc(0.625rem + 8px) calc(1.5rem + 8px);
+    background-color: white;
 }
 
 .ht6-login-header img {
@@ -73,9 +81,9 @@ a:hover {
     color: rgb(35, 181, 175);
 }
 
-.ht6-login-header span:last-of-type {
-    color: rgb(248, 182, 85);
-}
+/*.ht6-login-header span:last-of-type {*/
+/*    color: rgb(248, 182, 85);*/
+/*}*/
 
 .ht6-login-formcardwrapper {
     flex-grow: 1;
@@ -93,7 +101,7 @@ a:hover {
 }
 
 .ht6-card-infoarea {
-    color: var(--copy-navy);
+    color: var(--primary-navy);
     font-weight: bold;
 }
 
@@ -154,7 +162,7 @@ a:hover {
 }
 
 input[aria-invalid='true'] {
-    border: 1px solid #CA500B;
+    border: 2px solid var(--copy-red);
     background-color: #FFF5EF;
 }
 
@@ -193,20 +201,27 @@ input[aria-invalid='true'] {
     color: white;
     padding: calc(0.5em - 1px) calc(1em - 1px);
     letter-spacing: 0.125em;
-    border-radius: 0.125em;
+    border-radius: 6px;
     appearance: none;
     cursor: pointer;
     position: relative;
     right: 0;
     float: right;
     clear: right;
+    transition: background-color linear 200ms, border linear 200ms;
 }
 
 .ht6-button.primary {
     box-shadow: 0 0.125em 0.25em 0 #00000033;
-    background-color: var(--secondary-dark-navy);
-    border: 1px solid var(--secondary-dark-navy);
+    background-color: var(--primary-teal);
+    border: 1px solid var(--primary-teal);
     text-transform: uppercase;
+}
+
+.ht6-button.primary:hover {
+    box-shadow: 0 0.125em 0.25em 0 #00000033;
+    background-color: var(--darker-teal);
+    border: 1px solid var(--darker-teal);
 }
 
 /* Misc. Components */
@@ -228,21 +243,21 @@ input[aria-invalid='true'] {
 
 .ht6-info-card .content .title {
     margin-top: 0;
-    color: #0B2F39;
+    color: var(--primary-navy);
 }
 
 .ht6-info-card.success {
-    border-left: 2px solid #0F893B;
+    border-left: 2px solid var(--copy-green);
     background-color: #F3FFF8;
 }
 
 .ht6-info-card.warning {
-    border-left: 2px solid #CA500B;
+    border-left: 2px solid var(--copy-red);
     background-color: #FFF5EF;
 }
 
 .ht6-info-card.error {
-    border-left: 2px solid #CA500B;
+    border-left: 2px solid var(--copy-red);
     background-color: #FFF5EF;
 }
 
