--- a/login/resources/css/ht6.css
+++ b/login/resources/css/ht6.css
@@ -31,6 +31,10 @@ a:hover {
     color: var(--darker-teal);
 }
 
+.link-hidden {
+    text-decoration: none;
+}
+
 .margin-top-2 {
     margin-top: 2em;
 }
